<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="logo">logo</string>
    <string name="serandipName2">SERANDIP</string>
    <string name="loginemail">Email</string>
    <string name="loginpassword">Password</string>
    <string name="tvSignup">Sign Up</string>
    <string name="forgotpassword">Forgot password</string>
    <string name="dotnthaveaccount">Don\'t have an account?</string>
    <string name="tvSignUpSecond">SIGNUP</string>
    <string name="btn">LOGIN</string>
    <string name="serandipName">SERANDIP</string>
    <string name="serandipDesc">Beauty of  SRI-LANKA</string>
    <string name="placename">Places</string>
    <string name="hotelname">Hotel</string>
    <string name="shoppingname">Shopping</string>
    <string name="profilename">Profile</string>
    <string name="logoutname">Logout</string>
    <string name="rejsignup">Sign up</string>
    <string name="tvLogin">Login</string>
    <string name="rejusername">Username</string>
    <string name="rejemail">Email</string>
    <string name="rejpassword">Password</string>
    <string name="rejconformpassword">Conform password</string>
    <string name="signup">Sign Up</string>
    <string name="userprofile">Profile</string>
    <string name="username">Name</string>
    <string name="useremail">Email</string>
    <string name="userphone">Phone Number</string>
    <string name="userpassword">Password</string>
    <string name="updateaccount">Do you want to update account?</string>
    <string name="userupdateprofile">Update Profile</string>
    <string name="addprofilephote">Add Picture</string>
    <string name="updateusername">Name</string>
    <string name="updateuseremail">Email</string>
    <string name="updateuserphone">Phone Number</string>
    <string name="updateuserpassword">Password</string>
    <string name="reupdateuserpassword">ReEnter Password</string>
    <string name="updateuserimg">Update Profile</string>
    <string name="shopingDesc">Shopping</string>
    <string name="teaname">Tea</string>
    <string name="spicesname">Spices</string>
    <string name="Furniturename">Furniture</string>
    <string name="updatefurnitureform">Update Furniture Form</string>
    <string name="updatefurniturename">Furniture Neme</string>
    <string name="updatefurniturebrandname">Brand Name</string>
    <string name="updatefurnitureprice">Price</string>
    <string name="stetasfurniturretingtext">Status</string>
    <string name="updatefurniturebtn">UPDATE FURNITURE</string>
    <string name="textView">Name</string>
    <string name="textView2">Brand Name</string>
    <string name="textView4">Price</string>
    <string name="textView5">Rating</string>
    <string name="textView6">Status</string>
    <string name="Addfurnitureform">Add Furniture Form</string>
    <string name="addfurniturename">Furniture Name</string>
    <string name="addfurniturebrandname">Brand Name</string>
    <string name="addfurnitureprice">Price</string>
    <string name="addfurniturrestatustext">Status</string>
    <string name="addfurniturebtn">ADD FURNITURE</string>


    <string name="addhotelform">Add Hotel Form</string>
    <string name="addhotelimg">Add Picture</string>
    <string name="addformhotel">Hotel Name</string>
    <string name="districtname">District</string>
    <string name="textphone">Phone Number</string>
    <string name="addretingtext">Rating</string>
    <string name="addhotelbtn">ADD HOTEL</string>
    <string name="adminupdateprofile">Update Hotel Form</string>
    <string name="updatehotelimg">Update Picture</string>
    <string name="updatehotelname">Hotel Name</string>
    <string name="updatedistricname">District</string>
    <string name="updatehotletextphone">Phone Number</string>
    <string name="updatehotelbtn">Update Hotel</string>
    <string name="updateretingtext">Rating</string>
    <string name="adminhotelsview">Hotels</string>
    <string name="searchadminhotelview">Enter Hotel Name</string>
    <string name="searchuserhotelview">Enter Hotel Name</string>
    <string name="userhotelsview">Hotels</string>

    <string name="addplaceform">Add Place Form</string>
    <string name="addplaceimg">Add Picture</string>
    <string name="addplacename">Place Name</string>
    <string name="adddistricname">District</string>
    <string name="addtextplacephone">Phone Number</string>
    <string name="editText">Description</string>
    <string name="addplacebtn">Add Place</string>
    <string name="updateplaceform">Update Place Form</string>
    <string name="updateplacename">Place Name</string>
    <string name="updatetextphone">Phone Number</string>
    <string name="updateText">Description</string>
    <string name="updateplacebtn">Update Place</string>
    <string name="userplaceview">Places</string>
    <string name="searchuserplaceview">Enter Place Name</string>
    <string name="adminplaceview">Places</string>
    <string name="searchadminviewplaces">Enter Places Name</string>


</resources>