<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="150dp"
       android:id="@+id/rIHeader"
       tools:ignore="MissingConstraints">

       <ImageView
           android:id="@+id/mainlogo"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:src="@drawable/logo" />
   </RelativeLayout>

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@+id/rIHeader"
        android:layout_width="220dp"
        android:layout_height="480dp"
        android:background="@drawable/shape_left_panel"
        tools:ignore="MissingConstraints">

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/IILoginPanel"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_login_panel"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="70dp"
        android:paddingRight="50dp"
        app:layout_constraintTop_toBottomOf="@+id/rIHeader"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/loginemail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/loginemail" />

        <EditText
            android:id="@+id/loginpassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/loginpassword"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:text="@string/forgotpassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_login_button"
        android:text="@string/btn"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/IILoginPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,UnknownId" />

    <TextView
        android:id="@+id/tvLogin"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/IILoginPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"/>

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dotnthaveaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dotnthaveaccount" />

        <TextView
            android:id="@+id/tvSignUpSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/tvSignUpSecond"
            android:textColor="@color/color_violet"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/tvSignup"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="181dp"
        tools:ignore="MissingConstraints" />

    <!--mack shadow  -->





</androidx.constraintlayout.widget.ConstraintLayout>