<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileView">

    <TextView
        android:id="@+id/serandipName2"
        android:layout_width="206dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/serandipName2"
        android:textColor="@color/color_violet"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Addfurnitureform"
        android:layout_width="197dp"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:text="@string/userprofile"
        android:textColor="@color/color_violet"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serandipName2"
        tools:ignore="UnknownId" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="121dp"
        android:layout_height="83dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="UnknownId,UnknownIdInLayout" />

    <ImageView
        android:id="@+id/photoicon"
        android:layout_width="134dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/add_photo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoicon" />

    <EditText
        android:id="@+id/useremail"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/useremail"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/userphone"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/userphone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/useremail" />

    <EditText
        android:id="@+id/userpassword"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/userpassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userphone" />

    <TextView
        android:id="@+id/updateaccount"
        android:layout_width="216dp"
        android:layout_height="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="96dp"
        android:text="@string/updateaccount"
        android:textColor="@color/color_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userpassword" />


</androidx.constraintlayout.widget.ConstraintLayout>