<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileUpdate">

    <TextView
        android:id="@+id/serandipName2"
        android:layout_width="206dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:textSize="40sp"
        android:text="SERANDIP"
        android:textColor="@color/color_violet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Addfurnitureform"
        android:layout_width="197dp"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:text="@string/userupdateprofile"
        android:textColor="@color/color_violet"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serandipName2"
        tools:ignore="UnknownId" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="121dp"
        android:layout_height="83dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="UnknownId,UnknownIdInLayout" />

    <ImageView
        android:id="@+id/updatephotoicon"
        android:layout_width="134dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/add_photo" />

    <Button
        android:id="@+id/addprofilephote"
        android:layout_width="207dp"
        android:layout_height="58dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="252dp"
        android:text="@string/addprofilephote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateusername"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/updateusername"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addprofilephote" />

    <EditText
        android:id="@+id/updateuseremail"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/updateuseremail"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateusername" />

    <EditText
        android:id="@+id/updateuserphone"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/updateuserphone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateuseremail" />

    <EditText
        android:id="@+id/updateuserpassword"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/updateuserpassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateuserphone" />

    <EditText
        android:id="@+id/reupdateuserpassword"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/reupdateuserpassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateuserpassword" />

    <Button
        android:id="@+id/updateuserimg"
        android:layout_width="207dp"
        android:layout_height="58dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="668dp"
        android:text="@string/updateuserimg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>