<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Addplace">

    <TextView
        android:id="@+id/serandipName2"
        android:layout_width="206dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:textSize="40sp"
        android:text="SERANDIP"
        android:textColor="@color/color_violet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/updateplaceform"
        android:layout_width="197dp"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:text="@string/addplaceform"
        android:textColor="@color/color_violet"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serandipName2"
        tools:ignore="UnknownId" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="121dp"
        android:layout_height="83dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="UnknownId,UnknownIdInLayout" />

    <EditText
        android:id="@+id/addplacename"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:hint="@string/addplacename"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateplaceform" />

    <EditText
        android:id="@+id/adddistricname"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/adddistricname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addplacename" />

    <EditText
        android:id="@+id/addtextplacephone"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/addtextplacephone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adddistricname" />


    <EditText
        android:id="@+id/placedescription"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/editText"
        android:lines="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addtextplacephone"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addplacebtn"
        android:layout_width="207dp"
        android:layout_height="58dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/addplacebtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placedescription" />


</androidx.constraintlayout.widget.ConstraintLayout>