<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Addhotel"
    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" >

    <TextView
        android:id="@+id/serandipName2"
        android:layout_width="206dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:textSize="40sp"
        android:text="SERANDIP"
        android:textColor="@color/color_violet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Addfurnitureform"
        android:layout_width="197dp"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:text="@string/addhotelform"
        android:textColor="@color/color_violet"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serandipName2"
        tools:ignore="UnknownId" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="121dp"
        android:layout_height="83dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="UnknownId,UnknownIdInLayout" />


    <EditText
        android:id="@+id/addhotelname"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/addformhotel"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Addfurnitureform"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/addhotledistrict"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/districtname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addhotelname"
        android:autofillHints="" />

    <EditText
        android:id="@+id/addhoteltextphone"
        android:layout_width="363dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/textphone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addhotledistrict"
        android:autofillHints="" />

    <EditText
        android:id="@+id/addhotelretingtext"
        android:layout_width="365dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/addretingtext"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addhoteltextphone"
        android:autofillHints="" />

    <Button
        android:id="@+id/addhotlebtn"
        android:layout_width="205dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="36dp"
        android:text="@string/addhotelbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addhotelretingtext" />

</androidx.constraintlayout.widget.ConstraintLayout>